--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class": "^0.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "crypto": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-payload": "^1.0.7",
     "nestjs": "^0.0.1",
